@@ -1,156 +1,115 @@
 package com.hcl.favouritePayee.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.hcl.favouritePayee.dto.CreateFavoriteAccountRequest;
 import com.hcl.favouritePayee.dto.FavoritePayeeResponse;
+import com.hcl.favouritePayee.dto.UpdateFavoriteAccountRequest;
+import com.hcl.favouritePayee.entity.FavoritePayee;
 import com.hcl.favouritePayee.service.PayeesService;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
 
-import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Collections;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(PayeesController.class)
 class PayeesControllerTest {
 
-    @Mock
+    @Autowired
+    private MockMvc mockMvc;
+
+    @MockitoBean
     private PayeesService payeesService;
 
-    @InjectMocks
-    private PayeesController payeesController;
+    @Autowired
+    private ObjectMapper objectMapper;
 
-    private FavoritePayeeResponse samplePayeeResponse;
-    private Long customerId;
-    private int page;
-    private int size;
+    private FavoritePayeeResponse sampleResponse;
 
     @BeforeEach
     void setUp() {
-        customerId = 1L;
-        page = 0;
-        size = 20;
-
-        samplePayeeResponse = FavoritePayeeResponse.builder()
-                .id(1L)
-                .customerId(customerId)
-                .accountName("John Doe")
-                .iban("DE89370400440532013000")
-                .bankName("Test Bank")
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build();
+        sampleResponse = new FavoritePayeeResponse();
+        sampleResponse.setId(1L);
+        sampleResponse.setAccountName("John Doe");
+        sampleResponse.setIban("NL00BANK0123456789");
     }
 
     @Test
-    @DisplayName("Should return paginated favorite payees for valid customer")
-    void getFavoritePayees_ShouldReturnPaginatedPayees() {
-        Page<FavoritePayeeResponse> mockPage = new PageImpl<>(List.of(samplePayeeResponse), PageRequest.of(page, size), 1);
-        when(payeesService.getFavoriteAccounts(eq(customerId), any(Pageable.class))).thenReturn(mockPage);
+    void getAllFavoritePayees_ShouldReturnPagedList() throws Exception {
+        FavoritePayee entity = new FavoritePayee();
+        Page<FavoritePayee> page = new PageImpl<>(Collections.singletonList(entity));
 
-        ResponseEntity<Page<FavoritePayeeResponse>> response = payeesController.getFavoritePayees(customerId, page, size);
+        when(payeesService.getFavoriteAccounts(eq(12345L), any(PageRequest.class)))
+                .thenReturn(page);
 
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getContent()).hasSize(1);
-        assertThat(response.getBody().getContent().get(0).getAccountName()).isEqualTo("John Doe");
-        verify(payeesService).getFavoriteAccounts(eq(customerId), any(Pageable.class));
+        mockMvc.perform(get("/api/v1/payee/customer/12345")
+                        .param("page", "0")
+                        .param("size", "5"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content").isArray());
     }
 
     @Test
-    @DisplayName("Should return empty page when no payees exist")
-    void getFavoritePayees_ShouldReturnEmptyPage_WhenNoPayeesExist() {
-        Page<FavoritePayeeResponse> emptyPage = new PageImpl<>(List.of(), PageRequest.of(page, size), 0);
-        when(payeesService.getFavoriteAccounts(eq(customerId), any(Pageable.class))).thenReturn(emptyPage);
+    void getFavoritePayeeById_ShouldReturnPayee() throws Exception {
+        when(payeesService.getFavoriteAccount(1L)).thenReturn(sampleResponse);
 
-        ResponseEntity<Page<FavoritePayeeResponse>> response = payeesController.getFavoritePayees(customerId, page, size);
-
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getContent()).isEmpty();
-        assertThat(response.getBody().getTotalElements()).isZero();
+        mockMvc.perform(get("/api/v1/payee/1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.accountName").value("John Doe"))
+                .andExpect(jsonPath("$.iban").value("NL00BANK0123456789"));
     }
 
     @Test
-    @DisplayName("Should return multiple payees in page")
-    void getFavoritePayees_ShouldReturnMultiplePayees() {
-        FavoritePayeeResponse payee2 = FavoritePayeeResponse.builder()
-                .id(2L)
-                .customerId(customerId)
-                .accountName("Jane Doe")
-                .iban("GB82WEST12345698765432")
-                .bankName("West Bank")
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build();
+    void createFavoritePayee_ShouldReturnCreatedStatus() throws Exception {
+        CreateFavoriteAccountRequest request = new CreateFavoriteAccountRequest();
+        request.setAccountName("John Doe");
+        request.setIban("NL00BANK0123456789");
 
-        Page<FavoritePayeeResponse> mockPage = new PageImpl<>(List.of(samplePayeeResponse, payee2), PageRequest.of(page, size), 2);
-        when(payeesService.getFavoriteAccounts(eq(customerId), any(Pageable.class))).thenReturn(mockPage);
+        when(payeesService.createFavoriteAccount(eq(12345L), any(CreateFavoriteAccountRequest.class)))
+                .thenReturn(sampleResponse);
 
-        ResponseEntity<Page<FavoritePayeeResponse>> response = payeesController.getFavoritePayees(customerId, page, size);
-
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getContent()).hasSize(2);
-        assertThat(response.getBody().getTotalElements()).isEqualTo(2);
+        mockMvc.perform(post("/api/v1/payee/12345")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(1L));
     }
 
     @Test
-    @DisplayName("Should handle different page sizes correctly")
-    void getFavoritePayees_ShouldHandleDifferentPageSizes() {
-        int customSize = 10;
-        Page<FavoritePayeeResponse> mockPage = new PageImpl<>(List.of(samplePayeeResponse), PageRequest.of(page, customSize), 1);
-        when(payeesService.getFavoriteAccounts(eq(customerId), any(Pageable.class))).thenReturn(mockPage);
+    void updateFavoritePayee_ShouldReturnUpdatedPayee() throws Exception {
+        UpdateFavoriteAccountRequest request = new UpdateFavoriteAccountRequest();
+        request.setAccountName("Jane Doe");
 
-        ResponseEntity<Page<FavoritePayeeResponse>> response = payeesController.getFavoritePayees(customerId, page, customSize);
+        // Now maps exactly to payeesService.updateFavoriteAccount(id, request)
+        when(payeesService.updateFavoriteAccount(eq(1L), any(UpdateFavoriteAccountRequest.class)))
+                .thenReturn(sampleResponse);
 
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        verify(payeesService).getFavoriteAccounts(eq(customerId), any(Pageable.class));
+        mockMvc.perform(put("/api/v1/payee/1")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isOk());
     }
 
     @Test
-    @DisplayName("Should handle different page numbers correctly")
-    void getFavoritePayees_ShouldHandleDifferentPageNumbers() {
-        int pageNumber = 2;
-        Page<FavoritePayeeResponse> mockPage = new PageImpl<>(List.of(), PageRequest.of(pageNumber, size), 0);
-        when(payeesService.getFavoriteAccounts(eq(customerId), any(Pageable.class))).thenReturn(mockPage);
+    void deleteFavoritePayees_ShouldReturnNoContent() throws Exception {
+        // Now maps exactly to payeesService.deleteFavoriteAccount(id)
+        doNothing().when(payeesService).deleteFavoriteAccount(1L);
 
-        ResponseEntity<Page<FavoritePayeeResponse>> response = payeesController.getFavoritePayees(customerId, pageNumber, size);
-
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        verify(payeesService).getFavoriteAccounts(eq(customerId), any(Pageable.class));
-    }
-
-    @Test
-    @DisplayName("Should return payee with correct account details")
-    void getFavoritePayees_ShouldReturnPayeeWithCorrectDetails() {
-        Page<FavoritePayeeResponse> mockPage = new PageImpl<>(List.of(samplePayeeResponse), PageRequest.of(page, size), 1);
-        when(payeesService.getFavoriteAccounts(eq(customerId), any(Pageable.class))).thenReturn(mockPage);
-
-        ResponseEntity<Page<FavoritePayeeResponse>> response = payeesController.getFavoritePayees(customerId, page, size);
-        FavoritePayeeResponse result = response.getBody().getContent().get(0);
-
-        assertThat(result.getId()).isEqualTo(1L);
-        assertThat(result.getCustomerId()).isEqualTo(customerId);
-        assertThat(result.getAccountName()).isEqualTo("John Doe");
-        assertThat(result.getIban()).isEqualTo("DE89370400440532013000");
-        assertThat(result.getBankName()).isEqualTo("Test Bank");
-        assertThat(result.getCreatedAt()).isNotNull();
-        assertThat(result.getUpdatedAt()).isNotNull();
+        mockMvc.perform(delete("/api/v1/payee/1"))
+                .andExpect(status().isNoContent());
     }
 }
